--- a/calculator.html
+++ b/calculator.html
@@ -6,6 +6,11 @@ function cube() {
   var num = document.getElementById("n1");
   num.value = Math.pow(num.value, 3);
 }
+
+function fourth() {
+  var num = document.getElementById("n1");
+  num.value = Math.pow(num.value, 4);
+}
 </script>
 </head>
 <body>
@@ -14,6 +19,7 @@ function cube() {
   <input type="text" id="n1"><p>
 
   <button onclick="cube()"> x³ </button>
+  <button onclick="fourth()"> x⁴ </button>
 </body>
 </html>
  
